--- a/index.html
+++ b/index.html
@@ -1281,7 +1281,7 @@ Você tem 7 dias de garantia incondicional para desistir da compra. O risco é t
 </section>
 </div>
 <div class="de elBTN elAlign_center elMargin0 ui-droppable de-editable" id="tmp_button-21659" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false">
-<a href="https://app.monetizze.com.br/checkout/KHQ181542" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 elButtonFull" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(48, 160, 92); font-size: 20px;" rel="noopener noreferrer" target="_blank">
+<a href="https://app.monetizze.com.br/r/ASS15241622?u=c&pl=CK115184&src=yout.neg.onl" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 elButtonFull" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(48, 160, 92); font-size: 20px;" rel="noopener noreferrer" target="_blank">
 <span class="elButtonMain">SELECIONAR</span>
 <span class="elButtonSub"></span>
 </a>
@@ -1314,7 +1314,7 @@ Você tem 7 dias de garantia incondicional para desistir da compra. O risco é t
 </section>
 </div>
 <div class="de elBTN elAlign_center elMargin0 ui-droppable de-editable" id="button-89081" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false">
-<a href="https://app.monetizze.com.br/checkout/DVX115444" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 elButtonFull" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(48, 160, 92); font-size: 20px;" rel="noopener noreferrer" id="undefined-955" target="_blank">
+<a href="https://app.monetizze.com.br/r/ASS15241622?u=c&pl=VX115444&src=yout.neg.onl" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 elButtonFull" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(48, 160, 92); font-size: 20px;" rel="noopener noreferrer" id="undefined-955" target="_blank">
 <span class="elButtonMain">SELECIONAR</span>
 <span class="elButtonSub"></span>
 </a>
@@ -1355,7 +1355,7 @@ Você tem 7 dias de garantia incondicional para desistir da compra. O risco é t
 </section>
 </div>
 <div class="de elBTN elAlign_center elMargin0 ui-droppable de-editable" id="button-74270" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false">
-<a href="https://app.monetizze.com.br/checkout/DQP115186" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 elButtonFull" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(48, 160, 92); font-size: 20px;" rel="noopener noreferrer" id="undefined-623" target="_blank">
+<a href="https://app.monetizze.com.br/r/ASS15241622?u=c&pl=QP115186&src=yout.neg.onl" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 elButtonFull" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(48, 160, 92); font-size: 20px;" rel="noopener noreferrer" id="undefined-623" target="_blank">
 <span class="elButtonMain">SELECIONAR</span>
 <span class="elButtonSub"></span>
 </a>
@@ -2095,7 +2095,22 @@ window.addEventListener('load', function(){
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(cf, s);
       })();
-    </script>
+    </script><!-- GetButton.io widget -->
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "+5531975451805", // WhatsApp number
+            call_to_action: "Me Chame no WHATSAPP", // Call to action
+            position: "right", // Position may be 'right' or 'left'
+            pre_filled_message: "Gostaria de Ajuda Para Comprar o Central Bots ?", // WhatsApp pre-filled message
+        };
+        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
+<!-- /GetButton.io widget -->
 <script type="text/javascript" src="https://app.clickfunnels.com/mailcheck.min.js" async="async"></script><script type="text/javascript">window.addEventListener("load",function(){for(var e=["ar","at","au","be","br","ca","ch","cl","cn","cz","de","dk","es","eu","fi","fr","hk","hu","in","it","jp","kr","mx","nl","no","nz","pl","pt","ru","se","tk","tr","tw","uk","us"],i=0;i<e.length;i++){var a=e[i];Mailcheck.defaultTopLevelDomains.push(a),Mailcheck.defaultTopLevelDomains.push("com."+a)}var t=Mailcheck.defaultDomains.slice();for(i=0;i<t.length;i++)for(var s=t[i],l=0;l<e.length;l++){a=e[l];Mailcheck.defaultDomains.push(s+"."+a)}Mailcheck.defaultDomains.push("clickfunnels.com"),$('input[name="email"]').on("blur",function(){_this=this,$(this).mailcheck({suggested:function(e,i){$(".email_suggestion").remove(),$(e).parent().append('<div class="email_suggestion">Did you mean <a href="#">'+i.full+"</a>?</div>")},empty:function(){$(".email_suggestion").remove()}}),$.each("chenowith52@gmail.com, test@test.com, test@gmail.com, test@mail.com".split(","),function(e,i){0<=$(_this).val().search(i.trim())&&($(".email_suggestion").remove(),$(_this).val(""),$(_this).after('<div class="email_suggestion">Please use real email.</div>'))})}),$("body").on("click",".email_suggestion a",function(){$('input[name="email"]').val($(this).text())})});</script><script type="text/javascript">function getURLParameter(e){return decodeURIComponent((RegExp(e+"=(.+?)(&|$)").exec(location.search)||[,null])[1])}function getURLParameterExact(e){for(var t=window.location.search.substring(1).split("&"),n=0;n<t.length;n++){var r=t[n].split("=");if(r[0]==e)return r[1]}}</script><script type="text/javascript">window.addEventListener("load",function(){$(function(){"null"!=getURLParameter("email")&&($('input[name="contact[email]"]').val(getURLParameterExact("email")),$("[name=email]").val(getURLParameterExact("email"))),"null"!=getURLParameter("name")&&($('input[name="contact[name]"]').val(getURLParameterExact("name")),$("[name=name]").val(getURLParameterExact("name"))),"null"!=getURLParameter("first_name")&&($('input[name="contact[first_name]"]').val(getURLParameter("first_name")),$("[name=first_name]").val(getURLParameter("first_name"))),"null"!=getURLParameter("last_name")&&($('input[name="contact[last_name]"]').val(getURLParameter("last_name")),$("[name=last_name]").val(getURLParameter("last_name"))),"null"!=getURLParameter("address_1")&&($('input[name="contact[address_1]"]').val(getURLParameter("address")),$("[name=address_1]").val(getURLParameter("address_1"))),"null"!=getURLParameter("address_2")&&($('input[name="contact[address_1]"]').val(getURLParameter("address")),$("[name=address_2]").val(getURLParameter("address_2"))),"null"!=getURLParameter("city")&&($('input[name="contact[city]"]').val(getURLParameter("city")),$("[name=city]").val(getURLParameter("city"))),"null"!=getURLParameter("state")&&($('input[name="contact[state]"]').val(getURLParameter("state")),$("[name=state]").val(getURLParameter("state"))),"null"!=getURLParameter("zip")&&($('input[name="contact[zip]"]').val(getURLParameter("zip")),$("[name=zip]").val(getURLParameter("zip"))),"null"!=getURLParameter("phone")&&($('input[name="contact[phone]"]').val(getURLParameter("phone")),$("[name=phone]").val(getURLParameter("phone")))})});</script>
 <script type="text/javascript" src="https://app.clickfunnels.com/assets/pushcrew.js" async="async"></script><meta name='can_calculate_taxes' content='false'><script>
   $(function() {
@@ -2120,7 +2135,8 @@ window.addEventListener('load', function(){
   </script><script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"66a1976e0dba495d","token":"405b708a9b0242e88fda34dc27903686","version":"2021.6.0","si":10}'></script>
 <script type='text/javascript' src='https://plfa.centralbots.com.br/wp-includes/js/wp-embed.min.js?ver=5.7.2' id='wp-embed-js'></script>
 <script type='text/javascript' src='https://centralbots.com.br/wp-includes/js/wp-embed.min.js?ver=5.7.2' id='wp-embed-js'></script>
-</body>
+</body><iframe width="1" height="0"
+src="https://app.monetizze.com.br/r/ASS15241622?u=c&pl=CK115184&src=cookiemar.yout.neg.onl"></iframe>
 </html>
 </p>
 <!-- /wp:paragraph --></p>
